# hoox

./: .hoox.conf  .hoox.yaml  .neomake.yaml  CLAUDE.md  Cargo.toml  flake.nix
.github/workflows/: release.yml
crates/hoox/: Cargo.toml  build.rs
crates/hoox/res/: SPEC.md
crates/hoox/res/templates/: rust.conf  rust.yaml
crates/hoox/src/: args.rs  config.rs  hooks.rs  init.rs  main.rs  reference.rs
docs/: README.md
