[workspace]
resolver = "2"
members = ["crates/hoox"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/replicadse/hoox"
description = "Git hooks on steroids"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
clap-markdown = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
git2 = "0.19"
globset = "0.4"
regex = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
